{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MoveControls",
            "id": "60425468-b87e-4c8e-a160-10af351175ce",
            "actions": [
                {
                    "name": "MoveKeys",
                    "type": "PassThrough",
                    "id": "ca5edb9d-3f41-4190-8b66-7ac4d99043e9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "cfd4cecb-429b-4b1e-bfbc-330c04d52411",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMove",
                    "type": "PassThrough",
                    "id": "5e620020-4bc3-4379-801b-bf0c583a5515",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Targetting",
                    "type": "Button",
                    "id": "35a6b206-b2de-42f1-aa00-bfe19fcd3462",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetSwitch",
                    "type": "Value",
                    "id": "3ecf41a0-f3c5-4c3d-a9c9-0cb9d068bf66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "f30ab2c4-db62-48ce-8042-2e291ebb8fc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "680df214-2b2d-42ef-9093-c018d88ee127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrongAttack",
                    "type": "Button",
                    "id": "1c4d71ea-6143-4df9-a4ff-ccf10dd0517b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EvadeButton",
                    "type": "Button",
                    "id": "2c5ab708-e4a7-4944-abb7-ef00fed3aa51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "39862572-9b57-4c19-9ed1-8c32b192436f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "0026579f-a776-4d4f-8166-6086020f672c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a77d1585-486a-468c-be7e-d63f0cb4d0ad",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.5)",
                    "groups": "Gamepad",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "b7196db1-21f3-4dff-b426-b877a60412f1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeys",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60facd3c-e3e3-4718-804c-6af1b5e73249",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "702c6e43-4502-413b-85a1-733e7bbbffe5",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a5500f79-3944-4ec8-b3c2-6ddd0c208722",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7cf635f8-b8e6-4a1a-804b-6b88f10b5127",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2c830352-b2ff-470a-b2a4-cdd3598b7556",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.4)",
                    "groups": "Gamepad",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6983d93-100d-48ec-b026-0e3f2cdceda0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8912a23-5554-4abe-9560-c61c745f89c6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bee419c-62ff-4795-85fe-bf95a32182a0",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Targetting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2f62d27-82ab-4374-ba4c-3a9eb5b60d8a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Targetting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a09364d-2d99-4925-8f4c-c5b1958f6340",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.1)",
                    "groups": "Gamepad",
                    "action": "TargetSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0df2f656-c196-4711-9b77-283792a865f6",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c4f6e45-9c83-463e-9f8b-78e8b3063fa6",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77a29f30-4923-4b99-8d94-0cfc031b781a",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "StrongAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58beef73-0799-46a6-b520-0d46a1c2dc12",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "EvadeButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfae4a88-bbfc-4c1f-9948-c6e951a06c43",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "648293f6-1dce-498e-9805-273a1fc3027e",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}